# rust-blog

./: README.md
api/: Cargo.toml
api/src/: post_handler.rs
application/: Cargo.toml
application/src/post/: create.rs  read.rs
domain/: Cargo.toml
domain/src/: lib.rs  models.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
shared/: Cargo.toml
shared/src/: response_models.rs
